--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -66,15 +66,15 @@
                   </a>
                   <!-- Dropdown - User Information -->
                   <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-                    <a class="dropdown-item" href="#">
+                    <a class="dropdown-item" routerLink="/admin/profile" routerLinkActive="active">
                       <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                       Profile
                     </a>
-                    <a class="dropdown-item" href="#">
+                    <!-- <a class="dropdown-item" href="#">
                       <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
                       Settings
-                    </a>
-                    <a class="dropdown-item" href="#">
+                    </a> -->
+                    <a class="dropdown-item" routerLink="/admin/activitylog" routerLinkActive="active">
                       <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
                       Activity Log
                     </a>
