--- a/src/app/admin/left-navbar-menu/left-navbar-menu.component.html
+++ b/src/app/admin/left-navbar-menu/left-navbar-menu.component.html
@@ -107,7 +107,7 @@
     
           <!-- Sidebar Toggler (Sidebar) -->
           <div class="text-center d-none d-md-inline">
-            <button class="rounded-circle border-0" id="sidebarToggle"></button>
+            <button class="rounded-circle border-0" id="sidebarToggle" (click)="sidebarToggle();"></button>
           </div>
     
         </ul>
