mapbox initial integrate

--- a/src/app/admin/pharmacy/pharmacy-add/pharmacy-add.component.html
+++ b/src/app/admin/pharmacy/pharmacy-add/pharmacy-add.component.html
@@ -25,8 +25,11 @@
       <label>Photo :</label>
     <input type="text"  formControlName="photo" class="form-control form-control-user"  placeholder="photo">
   </div>
+  <div class="form-group">
+    <label>Location :</label>
+    <app-map></app-map>
+  </div>
   <input  class="btn btn-primary btn-user btn-block" type="submit" value="submit">
-
 </form>
 </div>
 </div>
