mapbox => mapclick with marker added

--- a/src/app/admin/pharmacy/pharmacy-add/pharmacy-add.component.html
+++ b/src/app/admin/pharmacy/pharmacy-add/pharmacy-add.component.html
@@ -27,7 +27,7 @@
   </div>
   <div class="form-group">
     <label>Location :</label>
-    <app-map></app-map>
+    <app-map (locationEvent)="receiveLocation($event)"></app-map>
   </div>
   <input  class="btn btn-primary btn-user btn-block" type="submit" value="submit">
 </form>
