--- a/src/app/admin/pharmacy/pharmacy-addedit/pharmacy-addedit.component.html
+++ b/src/app/admin/pharmacy/pharmacy-addedit/pharmacy-addedit.component.html
@@ -16,7 +16,7 @@
 <div class="row">
   <div class="col-lg-6">
     <div class="p-5">
-<form class="user" [formGroup]="pharmacyAddForm" (ngSubmit)="onSubmit()">
+<form class="user" [formGroup]="pharmacyAddEditForm" (ngSubmit)="onSubmit()">
   <div class="form-group">
     <label>Pharmacy Name:</label>
     <input type="text"  formControlName="pharmacyName" class="form-control form-control-user"  placeholder="Pharmacy Name">
