--- a/src/app/admin/pharmacy/pharmacy-list/pharmacy.component.html
+++ b/src/app/admin/pharmacy/pharmacy-list/pharmacy.component.html
@@ -1,4 +1,4 @@
-<a routerLink="/admin/pharmacy/add"><button class="btn btn-success pull-right" > Add Pharmacy</button></a>
+<a [routerLink]="['/admin/pharmacy/add', 0 ]"><button class="btn btn-success pull-right" > Add Pharmacy</button></a>
 
 <table class="table">
   <thead>
@@ -13,7 +13,7 @@
       <td>{{pharmacy.pharmacyName}}</td>
       <td>{{pharmacy.photo}}</td>
       <td>
-        <a class="btn btn-primary" [routerLink]="['/admin/pharmacy/edit', pharmacy.id ]">Edit</a>
+        <a class="btn btn-primary" [routerLink]="['/admin/pharmacy/add', pharmacy.id ]">Edit</a>
         <a class="btn btn-primary" [routerLink]="['/admin/pharmacy/medicines', pharmacy.id ]">Views medicines</a>
 
         <a class="btn btn-secondary"  data-toggle="modal" data-target="#deleteModal" data-pharmacy-id="pharmacy.id">Delete</a>
